--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,7 +4,9 @@
   "description": "Backend for developer app",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "server":"nodemon server"
   },
   "author": "",
   "license": "ISC",
