--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,8 +5,8 @@
   "main": "server.js",
   "scripts": {
     "start": "node server",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "server":"nodemon server"
+    "server":"nodemon server",
+    ""
   },
   "author": "",
   "license": "ISC",
